--- a/devII/src/index.html
+++ b/devII/src/index.html
@@ -4,12 +4,13 @@
   <meta http-equiv="Cross-Origin-Opener-Policy" content="same-origin-allow-popups">
 
   <meta charset="utf-8">
-  <title>DevII</title>
+  <title>IFRS Restinga</title>
   <base href="/">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:wght@500;700&display=swap" rel="stylesheet">
 
   <script src="https://apis.google.com/js/platform.js?onload=init" async defer></script>
   <meta name="608337993679-jbh57642rjhkuuaefg5lik3vol1tk4jc.apps.googleusercontent.com" content="608337993679-jbh57642rjhkuuaefg5lik3vol1tk4jc.apps.googleusercontent.com">
